# CM-tool

./: Baseline.cpp  README.md  datebase.cpp  main.cpp  optimized_code.cpp  run.sh
practise_project/: README.md
practise_project/mpi/random_walk/: annotated_code.cpp  code_plus_annotated.cpp  plus_code_end.cpp
project_not_for_cuda 1.0/: CMakeLists.txt  Head.hpp  examination.cpp  run.sh
project_not_for_cuda_1.0/: Baseline.cpp  CMakeLists.txt  Head.hpp  README_1_0.md  datebase.cpp  examination.cpp  main.cpp  optimized_code.cpp  run.sh
project_not_for_cuda_2.0/: README_2_0.md  run.sh
project_not_for_cuda_2.0/code/: CMakeLists.txt
project_not_for_cuda_2.0/code/based_code/: examination.cpp  main.cpp
project_not_for_cuda_2.0/code/include/: Head.hpp
project_not_for_cuda_2.0/code/scr/: optimized_code.cpp
